Fix content article page spacing

--- a/src/sass/pages/_contentarticle.scss
+++ b/src/sass/pages/_contentarticle.scss
@@ -767,7 +767,8 @@
         #top-title {
 
             .content-tags {
-                left: 12.5%;
+                // left: 12.5%;
+                left: 10%;
             }
 
             h2 {
@@ -792,7 +793,7 @@
         #top-title {
 
             .content-tags {
-                left: 11%;
+                left: 8%;
             }
 
             .content-location {
@@ -829,11 +830,11 @@
     #content-title-page {
         #top-title {
             .content-tags {
-                left: 8.5%;
+                left: 7%;
             }
 
             .content-location {
-                left: 95%;
+                left: 93%;
             }
         }
 
